--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/myBudget
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.level.org.springframework.web=DEBUG
